--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@tanstack/react-router-devtools": "^1.114.3",
     "@tanstack/router-plugin": "^1.114.3",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "react-google-button": "^0.8.0"
   },
   "devDependencies": {
     "@testing-library/dom": "^10.4.0",
